[package]
name = "opensc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "opensc"
crate-type = ["lib", "cdylib"]

[[example]]
name = "chunks"
path = "src/chunks.rs"


[features]
tracy = ["profiling/profile-with-tracy", "tracy-client"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
cfg-if = "1"
glam = "0.20.0"
histogram = "0.6"
image = { version = "0.23", default-features = false, features = ["png", "jpeg", "tiff"]}
indoc = "1"
instant = { version = "0.1", features = ["wasm-bindgen"] }
log = "0.4"
pico-args = "0.4"
pollster = "0.2"
profiling = { version = "1", default-features = false }
rend3 = { version = "^0.3.0" }
rend3-framework = { version = "^0.3.0" }
rend3-gltf = { version = "^0.3.0", default-features = false, features = ["ddsfile", "ktx2"] }
rend3-routine = { version = "^0.3.0" }
rustc-hash = "1"
smallvec = "1"
tracy-client = { version = "0.12", optional = true }
wgpu-profiler = "0.8.0"
winit = "0.26"
binrw = "*"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = { version = "0.5", features = ["logger"] }

[package.metadata.android]
build_targets = ["aarch64-linux-android"]
assets = "resources"

[package.metadata.android.sdk]
min_sdk_version = 28
target_sdk_version = 28
compile_sdk_version = 28

[package.metadata.android.application.activity]
orientation = "landscape"
